--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,31 @@
 .App {
   text-align: center;
+  overflow-y: scroll;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+input[type='select'] {
+  text-align: left;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ContentBox{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: column;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+input[type='text'] {
+  margin-top: 20px;
+  width: 94%;
+  box-sizing: border-box;
+  border: 1px solid transparent;
+  font-size: 18px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  outline: none;
+  background-color: rgba(236, 236, 236, 0.867);
+  display: block;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen 
+ and (min-width: 650px) {
+  input[type='text'] {
+    width: 60%;
+    margin: 20px auto 0 auto;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ }
